# webserv

./: CGI.cpp  CGI.hpp  CMakeLists.txt  Config.cpp  Config.hpp  Location.cpp  Location.hpp  Makefile  README.md  Readme.txt  Request.cpp  Request.hpp  RequestParser.cpp  RequestParser.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  TCPlistener.cpp  TCPlistener.hpp  default.conf  hello.html  main.cpp  webserv  welcome.html
HTTP/error_pages/: 403.html  404.html  405.html  500.html
cgi-bin/: cgi.cpp  hello.php  out.html  test.py
test_cgi/: get_cookie.php  hello.php  hola.py  page_count.php  py_script.py  queries.php  session.php  set_cookie.php  set_session.php  while.py  while_true.php
uploads/: we.html
